# ai-test-report

./: .gitignore  README.md  bumpver.toml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/ai_test_report/: __init__.py  __main__.py  config.yml
src/ai_test_report/basic/: __init__.py  common_tools.py  err_tools.py  gitlab_tools.py  log_tools.py
src/ai_test_report/reports/: chart_template.html
tests/: test_gitlab_tools.py  test_login.py  test_view.py  test_write.py
