[metadata]
name = ai_test_report
version = 0.1.0
description = Visual test automation reporting with Pytest + pandas + Chart.js
author = 和碩
author_email = fly50789@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pytest
    pandas
    jinja2
    openpyxl

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
ai_test_report =
    config.yml
    reports/*.html
    reports/*.xlsx

[options.entry_points]
console_scripts =
    ai_test_report = ai_test_report.__main__:main

[options.extras_require]
dev =
    wheel
    setuptools
    setuptools_scm
    pytest-cov
    flake8
    black
    pylint


